CHANGELOG of java-thumbnailer
-----------------------------

+ Add Feature
* Bugfix
# Enhance Feature


v0.6
----
(not released yet)
+ Automatic regain installation via ant (see https://github.com/benjaminpick/java-thumbnailer/wiki/Building-from-source)
* Fix NullPointerException for Office2007FileIdentifier

v0.5
----
(30. March 2012)
* Catch all errors of POI (no idea in which edge case this could change something)
* MS-Office-FileIdentifiers does not need temporary files anymore.
* Improve Perfomance of PDFBox a little bit
* Centralise handling of temporary files
* Add HTML thumnailing (rudimentary)

v0.4
----
(5. January 2012)

+ Add Apache POI 3.7
* Update JODConverter to latest version in SVN
+ Old Office Files are now detected via MIME => Performance improvement: Zip files can quicker be detected as non-office file

Failing Tests:
- ChainedHashtable: testBacking                 (not important, as currently not used)
- ThumbnailersFailingTest: testFailingJOD       (JOD may falsely claim having succeeded when converting a binary file)
- MIMEDectectionExtensiveTest: txt-related (10) (Txt files cannot be detected by content - should we detect ASCII-Files?)

v0.3
----
(9. August 2011)

* Make Lucene Value "filelocation" relative to thumnailFolder
* Changed Lucene Value "no thumbnailer found" to "nothumbnailerfound" (to avoid tokenizing)
* Add <thumbnailer:img/> to taglib

v0.2
----
(2. August 2011)

+ MIME-Test: Office2007-Files & OpenOffice files are detected via Zip/XML
# Upgrade PDFBox 1.5.0 -> 1.6.0
* JODConverter didn't delete his temporary files if conversion failed

Failing tests:
- ChainedHashtable: testBacking              (not important, as currently not used)
- MimeDetectionTest: testOfficeFiles{1,2,3}  (meaning only that conversion takes longer than necessary) 
- ThumbnailersFailingTest: testFailingJOD    (JOD may falsely claim having succeeded when converting a binary file)

v0.1
----
(29. July 2011)

First public release.